# dt9ezskevixgm3q01tdb3z8ak

./: .copier_answers.yml  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  README.md  mkdocs.yaml  pyproject.toml  zensical.toml
.github/: citation.cff  code_of_conduct.md  contributing.md  governance.md  security.md  support.md
.github/workflows/: cd.yml  ci.yml
documentation/: index.md
dt9ezskevixgm3q01tdb3z8ak/: __init__.py  __init__.pyi
