######################################################################################################
#                                              metadata                                              #
######################################################################################################
[project]
name = "dt9ezskevixgm3q01tdb3z8ak"
dynamic = ["version"]

requires-python = ">= 3.14"
dependencies = []

authors = [{name = "Jevan Goh", email = "javerngoh@gmail.com"}]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[dependency-groups]
build = [
    "build>=1.5.0,<2"
]
dev = [
    "ruff>=0.14.13,<0.15",
    "prek>=0.2.30,<0.3",
    "mypy>=1.19.1,<2",
    "copier>=9.14.3,<10"
]
docs = [
    "zensical>=0.0.47,<0.0.48",
    "pymdown-extensions>=10.20,<11"
]

######################################################################################################
#                                                pixi                                                #
######################################################################################################
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "linux-aarch64"]

[tool.pixi.target.linux-aarch64.activation]
env = { LD_LIBRARY_PATH = "$LD_LIBRARY_PATH:$CONDA_PREFIX/lib" }

[tool.pixi.pypi-options]
extra-index-urls = ["https://jevangoh.github.io/as1oocnl0leb61sj1yew20lt2/"]

[tool.pixi.pypi-dependencies]
dt9ezskevixgm3q01tdb3z8ak = { path = ".", editable = true }

# ==================================== defaults ====================================
[tool.pixi.tasks]
    
# ==================================== environments ====================================
# ----------------------------- dev -----------------------------
[tool.pixi.environments.dev]
features = ["dev", "docs", "build"]
solve-group = "default"

# ==================================== features ====================================
# ----------------------------- dev -----------------------------
[tool.pixi.feature.dev.dependencies]
git = ">=2.54.0,<3"
gh = ">=2.83.2,<3"
nodejs = ">=24,<25.3"
prettier = ">=3.8.3"

[tool.pixi.feature.dev.tasks]
setup = "prek install"

lint_documents = "prettier --check --ignore-unknown"
format_documents = "prettier --write --ignore-unknown"
lint_all_documents = "prettier --check . --ignore-unknown"
format_all_documents = "prettier --write . --ignore-unknown"

update_template = "copier update --answers-file .copier_answers.yml --vcs-ref main"

build_package = "python -m build"

# ----------------------------- docs -----------------------------
[tool.pixi.feature.docs.dependencies]

[tool.pixi.feature.docs.tasks]
build_docs = "zensical build --config-file zensical.toml"

######################################################################################################
#                                                ruff                                                #
######################################################################################################
[tool.ruff]
src = ["."]
exclude = ["node_modules", "venv", ".git", ".pixi"]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

######################################################################################################
#                                                mypy                                                #
######################################################################################################
[tool.mypy]
mypy_path = "."
exclude = ["node_modules", "venv", ".git", ".pixi", "build"]

strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
ignore_missing_imports = true

######################################################################################################
#                                                hatch                                               #
######################################################################################################
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
version_scheme = "post-release"



